# shuduku

./: CMakeLists.txt  README.md
src/: main.cpp  sudoku.cpp  sudoku.hpp
test/: test_error.txt  test_solve.txt
